--- a/Frontend/my-app/src/styles.css
+++ b/Frontend/my-app/src/styles.css
@@ -376,19 +376,23 @@ input[type="text"], select, textarea {
 
 .card-text-user {
   margin-bottom: 5px;
-  font-size: 12px;
+  font-size: 15px;
   color: #595858;
 }
 
 .card-text {
-  font-size: 16px;
+  font-size: 19px;
   color: #333;
 }
 
 .card-text-small {
   margin-top: 30px;
-  font-size: 10px;
+  font-size: 14px;
   color: #4d4c4c;
+}
+
+.service-icon{
+  font-size: 23px;
 }
 
 .home-page .container {
